@startuml
!pragma layout smetana
'https://plantuml.com/sequence-diagram

class User {
-String userID
-String password
+List<String> allergies
+List<String> cuisineRestriction
+Duration timeRestriction
+Float costRestriction
+RecipeHistory history
+Inventory items

+ filterAllergies(List<String> allergies)
+ filterVege(boolean vege)
}

class RecipeHistory{
+List<Recipe> recipesDone

-void addRecipe(Recipe recipe)
-void removeRecipe(Recipe recipe)
}

class Recipe{
+List<String> ingredients
+String instructions
+float flavourScore
+float handyScore
-int timesDone

+void doneNow(float flavourScore, float handyScore)
+void updateIngredients(List<String> newIngredients)
}

class Inventory {
+List<String> veges
+List<String> meat
+List<String> seasonings
+List<String> other

+void addItem(List<String> items)
+void removeItem(List<String> items)
}



class CallRecipe {
+List<Recipe> CallRecipe(Inventory inventory, List<String> cuisineRestriction,
 Duration timeRestriction, Float costRestriction)
-Recipe StringToRecipe(String recipe)
}

class QueryAPI {
-String apiKey
+List<String> QueryAPI(Inventory inventory, List<String> cuisineRestriction,
Duration timeRestriction, Float costRestriction)
}

class QueryDatabase {
-String databaseDirectory
+List<String> QueryDatabase(Inventory inventory, List<String> cuisineRestriction,
Duration timeRestriction, Float costRestriction)
}

RecipeHistory --> Recipe
User *-- Inventory
User *-- RecipeHistory
QueryAPI --* CallRecipe
QueryDatabase --* CallRecipe
User -- CallRecipe

@enduml